--- a/examples/tärendö.html
+++ b/examples/tärendö.html
@@ -10,7 +10,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr ng-repeat="row in controller.rows">
+    <tr ng-repeat="row in vm.rows">
         <td> {{::row.name}} </td>
         <td> {{::row.age}} </td>
         <td> {{::row.nationality}} </td>
