Updated tärendö so that it does not depend on DataTables css

--- a/examples/tärendö/index.html
+++ b/examples/tärendö/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>Tärendö Example</title>
 
-    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="../bower_components/datatables/media/css/dataTables.bootstrap.css">
+    <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="tärendö.css">
 </head>
 <body>
@@ -14,11 +13,12 @@
     <div tärendö-table></div>
 </div>
 
-<script src="../bower_components/angular/angular.js"></script>
+<script src="../../bower_components/angular/angular.js"></script>
 
-<script src="../src/index.js"></script>
-<script src="../src/core/NgIkeaTableController.js"></script>
-<script src="../src/core/teunSort.js"></script>
+<script src="../../src/index.js"></script>
+<script src="../../src/core/NgIkeaTableController.js"></script>
+<script src="../../src/core/teunSort.js"></script>
+
 <script src="tärendö.js"></script>
 
 </body>
