--- a/examples/tärendö/tärendö.html
+++ b/examples/tärendö/tärendö.html
@@ -2,11 +2,11 @@
     <caption>Your Advertisement Here!</caption>
     <thead>
     <tr>
-        <th ng-class="vm.sortable.columns['name'].class" ng-click="vm.sort($event,'name')">Name</th>
-        <th ng-class="vm.sortable.columns['age'].class" ng-click="vm.sort($event,'age')">Age</th>
-        <th ng-class="vm.sortable.columns['nationality'].class" ng-click="vm.sort($event,'nationality')">Nationality</th>
-        <th ng-class="vm.sortable.columns['canon'].class" ng-click="vm.sort($event,'canon')">Canon</th>
-        <th ng-class="vm.sortable.columns['death'].class" ng-click="vm.sort($event,'death')">Death</th>
+        <th ng-click="vm.sort($event,'name')">Name <i class="sorting-icon" ng-class="vm.getIconClass('name')"></i></th>
+        <th ng-click="vm.sort($event,'age')">Age <i class="sorting-icon" ng-class="vm.getIconClass('age')"></i></th>
+        <th ng-click="vm.sort($event,'nationality')">Nationality <i class="sorting-icon" ng-class="vm.getIconClass('nationality')"></i></th>
+        <th ng-click="vm.sort($event,'canon')">Canon <i class="sorting-icon" ng-class="vm.getIconClass('canon')"></i></th>
+        <th ng-click="vm.sort($event,'death')">Death <i class="sorting-icon" ng-class="vm.getIconClass('death')"></i></th>
     </tr>
     </thead>
     <tbody>
