Updated bjursta to show DataTables styling or Font Awesome styling

--- a/examples/bjursta/bjurstaFa.html
+++ b/examples/bjursta/bjurstaFa.html
@@ -2,11 +2,11 @@
     <caption>Your Advertisement Here!</caption>
     <thead>
     <tr>
-        <th ng-click="vm.sort($event,'name')">Name <i class="bjursta-sorting-icon" ng-class="vm.getIconClass('name')"></i></th>
-        <th ng-click="vm.sort($event,'age')">Age <i class="bjursta-sorting-icon" ng-class="vm.getIconClass('age')"></i></th>
-        <th ng-click="vm.sort($event,'nationality')">Nationality <i class="bjursta-sorting-icon" ng-class="vm.getIconClass('nationality')"></i></th>
-        <th ng-click="vm.sort($event,'canon')">Canon <i class="bjursta-sorting-icon" ng-class="vm.getIconClass('canon')"></i></th>
-        <th ng-click="vm.sort($event,'death')">Death <i class="bjursta-sorting-icon" ng-class="vm.getIconClass('death')"></i></th>
+        <th ng-click="vm.sort($event,'name')">Name <i class="sorting-icon" ng-class="vm.getIconClass('name')"></i></th>
+        <th ng-click="vm.sort($event,'age')">Age <i class="sorting-icon" ng-class="vm.getIconClass('age')"></i></th>
+        <th ng-click="vm.sort($event,'nationality')">Nationality <i class="sorting-icon" ng-class="vm.getIconClass('nationality')"></i></th>
+        <th ng-click="vm.sort($event,'canon')">Canon <i class="sorting-icon" ng-class="vm.getIconClass('canon')"></i></th>
+        <th ng-click="vm.sort($event,'death')">Death <i class="sorting-icon" ng-class="vm.getIconClass('death')"></i></th>
     </tr>
     </thead>
     <tbody>
