--- a/examples/bjursta/index.html
+++ b/examples/bjursta/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="../../bower_components/datatables/media/css/dataTables.bootstrap.css">
     <link rel="stylesheet" href="../../bower_components/font-awesome/css/font-awesome.css">
-    <link rel="stylesheet" href="bjursta.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
@@ -29,6 +29,7 @@
 
 <script src="index.js"></script>
 <script src="bjursta.js"></script>
+<script src="bjurstaFa.js"></script>
 
 </body>
 </html>
