--- a/examples/bjursta/index.html
+++ b/examples/bjursta/index.html
@@ -19,6 +19,10 @@
     <div class="row">
         <div bjursta-table-fa></div>
     </div>
+
+    <div class="row">
+        <div bjursta-table-dx></div>
+    </div>
 </div>
 
 <script src="../../bower_components/angular/angular.js"></script>
@@ -30,6 +34,7 @@
 <script src="index.js"></script>
 <script src="bjursta.js"></script>
 <script src="bjurstaFa.js"></script>
+<script src="bjurstaDx.js"></script>
 
 </body>
 </html>
