Beta version of bjursta pagination

--- a/examples/bjursta/bjurstaDx.html
+++ b/examples/bjursta/bjurstaDx.html
@@ -1,4 +1,4 @@
-<table class="table table-bordered table-striped table-hover dataTable">
+<table class="table table-bordered table-striped table-hover">
     <caption>Your Advertisement Here!</caption>
     <thead>
     <tr>
