--- a/examples/bjursta/index.html
+++ b/examples/bjursta/index.html
@@ -23,9 +23,14 @@
     <div class="row">
         <div bjursta-table-dx></div>
     </div>
+
+    <div class="row">
+        <div bjursta-table-lx></div>
+    </div>
 </div>
 
 <script src="../../bower_components/angular/angular.js"></script>
+<script src="../../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 
 <script src="../../src/index.js"></script>
 <script src="../../src/core/NgIkeaTableController.js"></script>
@@ -35,6 +40,7 @@
 <script src="bjursta.js"></script>
 <script src="bjurstaFa.js"></script>
 <script src="bjurstaDx.js"></script>
+<script src="bjurstaLx.js"></script>
 
 </body>
 </html>
